@@ -64,11 +64,11 @@ public class DeleteDocumentsHandler extends Handler<AddDocumentRequest, AddDocum
       }
     }
     try {
-      shardState.writer.deleteDocuments(terms.stream().toArray(Term[]::new));
+      shardState.writer.deleteDocuments(terms.toArray(Term[]::new));
     } catch (IOException e) {
       logger.warn(
           "ThreadId: {}, writer.deleteDocuments failed",
-          Thread.currentThread().getName() + Thread.currentThread().getId());
+          Thread.currentThread().getName() + Thread.currentThread().threadId());
       throw new DeleteDocumentsHandlerException(e);
     }
     long genId = shardState.writer.getMaxCompletedSequenceNumber();
